@startuml
class Manager {
}

class ManagerPage {
  +getDeliveryOrderDetails()
}

class ManagerOrderController {
  +getDeliveryOrderDetails()
}

class OrderService {
  +findDeliveryOrderDetails()
}

class OrderRepository {
  +queryAllDeliveryOrderDetails()
}

class Database {
}

Manager --> ManagerPage : uses
ManagerPage --> ManagerOrderController : interacts with
ManagerOrderController --> OrderService : depends on
OrderService --> OrderRepository : depends on
OrderRepository --> Database : interacts with
@enduml
